--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Enes Karali's Work",
-    "start_url": "/automataLab/index.html",
+    "start_url": "/automata/index.html",
     "display": "standalone",
     "background_color": "green",
     "icons": [
